[package]
name = "luhnsynth"
version = "0.1.0"
edition = "2024"
authors = ["Dr. Xenith QuantumWeather<xenith@glorvo.com>"]
description = "A tool generate synthetic credit card data for use with testing tools like luhnoxide"

[dependencies]
rand = "0.8.5"
chrono = "0.4.24"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
